--- a/papers/templates/papers/partials/paper_detail_partials.html
+++ b/papers/templates/papers/partials/paper_detail_partials.html
@@ -71,7 +71,7 @@
       
       <!-- Matched Citations -->
       <div class="border border-gray-200 p-4 rounded-lg shadow-sm bg-white space-y-3 dark:bg-gray-700/30 dark:border-gray-800">
-        <h3 class="text-lg font-semibold text-gray-700/30 mb-2 dark:text-gray-300">Matched Citations ({{ matched_citation_count }})</h3>
+        <h3 class="text-lg font-semibold text-gray-700 mb-2 dark:text-gray-300">Matched Citations ({{ matched_citation_count }})</h3>
         
         {% if matched_citations %}
         <ul class="space-y-2">
@@ -96,14 +96,14 @@
 
       <!-- Cited By -->
       <div class="border border-gray-200 p-4 rounded-lg shadow-sm bg-white space-y-3 dark:bg-gray-700/30 dark:border-gray-800">
-        <h3 class="text-lg font-semibold text-gray-700/30 mb-2 dark:text-gray-300">Cited By ({{ paper.citation_count }})</h3>
+        <h3 class="text-lg font-semibold text-gray-700  mb-2 dark:text-gray-300">Cited By ({{ paper.citation_count }})</h3>
         
         {% if citations_pointing_here %}
         <ul class="space-y-2">
           {% for cite in citations_pointing_here %}
           <li class="p-2 rounded border border-gray-100 dark:border-gray-800 bg-gray-50 dark:bg-gray-700/30">
             <div class="text-sm text-gray-800 dark:text-gray-300">
-              <strong>{{ cite.source_paper.title }}</strong> cited this paper.
+              <strong class="dark:text-gray-300">{{ cite.source_paper.title }}</strong> cited this paper.
               <div class="text-xs text-gray-500 mt-1 ">Score: {{ cite.score|floatformat:3 }}</div>
             </div>  
             <a href="{% url 'paper_detail' cite.source_paper.pk %}" class="text-blue-800 underline text-sm hover:text-blue-950 mt-1 block">
